--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@nextui-org/react": "^2.6.11",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.16.0",
+    "lucide-react": "^0.483.0",
     "moment": "^2.30.1",
     "next": "15.1.4",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
